[project]
name = "ai4ed-turing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.11.0",
    "google-search-results>=2.4.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "langchain[openai]==1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core==1.1.0",
    "langchain-google-community>=3.0.1",
    "langchain-openai==1.1.0",
    "langgraph==1.0.3",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.2.10",
    "langsmith==0.4.47",
    "openai==2.8.1",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "prompt-toolkit>=3.0.52",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "regex==2025.11.3",
    "requests-toolbelt==1.0.0",
    "rich>=14.2.0",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "langchain-text-splitters>=1.0.0",
    "beautifulsoup4>=4.14.3",
]
